--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/smartschool?useSSl=false&serverTimezone=UTC
 database.userName=root
 database.password=said
+spring.main.web-application-type=none
