Notice function of admin and student users

--- a/src/main/resources/bundle.properties
+++ b/src/main/resources/bundle.properties
@@ -2,3 +2,7 @@ LoginAs.title=LOGIN AS
 LoginAdmin.title=LOGIN ADMIN
 LoginStudent.title=LOGIN STUDENT
 HomeStudent.title=HOME STUDENT
+MainNoticeAdmin.title= MAIN NOTICE ADMIN
+NoticeAdmin.title= NOTICE ADMIN
+HomeAdmin.title= HOME ADMIN
+NoticeStudent.title= NOTICE STUDENT
