Update interfaces and add documents functionality

--- a/src/main/resources/bundle.properties
+++ b/src/main/resources/bundle.properties
@@ -6,3 +6,6 @@ MainNoticeAdmin.title= MAIN NOTICE ADMIN
 NoticeAdmin.title= NOTICE ADMIN
 HomeAdmin.title= HOME ADMIN
 NoticeStudent.title= NOTICE STUDENT
+CoursesStudent1.title= COURSES STUDENT
+CoursesStudent2.title= COURSES STUDENT
+StudentDocuments.title STUDENT DOCUMENTS
