--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,17 @@
           <version>11.0.2</version>
         </dependency>
 		
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.6.0</version>
+		</dependency>
+		
+		<dependency>
+		   <groupId>net.sf.jasperreports</groupId>
+		   <artifactId>jasperreports-fonts</artifactId>
+		   <version>6.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
