changed application.properties data source infos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/smartschool?useSSl=false&serverTimezone=UTC
-database.userName=root
-database.password=said
+database.userName=hbstudent
+database.password=hbstudent
 spring.main.web-application-type=none
