--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-
-
-database.driver=com.mysql.cj.jdbc.Driver
+database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/smartschool?useSSl=false&serverTimezone=UTC
-database.userName=hbstudent
-database.password=hbstudent
->>>>>>> c10a2a4... Add restTemplate and connection to server
->>>>>>> 4fe718edd53b430ae4f8987d73a1356e269ef5de
+database.userName=root
+database.password=said
 spring.main.web-application-type=none
